# legatobot

./: .createevent.py.swp  .formating.py.swp  8ball_command.py  CMakeLists.txt  README.md  comp.py  config.py  conv.py  createevent.py  dependencies.md  don.csv  don.ics  fas  formating.py  hanna.csv  hanna.ics  ical2csv.py  log.out  lunch_command.py  main.py  readschedule.py  ready_event.py  uid.sh  vc_create_event.py
.github/workflows/: codeql-analysis.yml
cogs/: 8ball_command.py  amn_command.py  cce_command.py  get_command.py  nextclass_command.py  nnclass_command.py  ready_event.py  sus_command.py  uid.py  update_command.py  vc_create_event.py
drafts/: .22aaaaaa.ics.swp  .chart.cpp.swp  .coolbro.py.swp  .ical2csv.cpp.swp  .ical2csv.py.swp  .unturl.cpp.swp  bak.comptime.cpp  chart.cpp  comptime.cpp  cook  coolbro.py  curlurl  don.csv  formatter.cpp  getid.cpp  gtest.cpp  ical2csv.cpp  mails_complete.txt  main.cpp  testc.cpp  timetest.cpp  untest.cpp
drafts/ical/: a.out  icaltovar.cpp  main.cpp  maintest.cpp  urltocsv.cpp  urltojson.cpp
drafts/ical/old/: example.ics
drafts/styjs/: jtc.js  jtc_use_schedulemenu.js
drafts/styjs/traceTreeForUrlGen/: .zt_onclick.js.swp  QPk.js  bzd.js  czd.js  info.md  rzd.js  trace.js  zt_onclick.js
drafts/urlget/: geturl.cpp  test.cpp
src/: main.cpp
src/headers/: .unturl.cpp.swp  .urltojson.cpp.swp  formatter.cpp  get.cpp  unturl.cpp  urltojson.cpp
testfiles/: createevent.py  testcal.py  testcreateevent.py  ttestbutt.py
